// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`image > animated (non-instant) show emits per-layer animate 1`] = `
[
  {
    "id": "req-1",
    "kind": "request",
    "method": "ui/update",
    "params": {
      "attributes": undefined,
      "breakpoints": {
        "lg": 1024,
        "md": 768,
        "sm": 640,
        "xl": 1280,
        "xs": 400,
      },
      "content": undefined,
      "element": "e-1",
      "style": {
        "display": null,
      },
    },
  },
  {
    "id": "req-2",
    "kind": "request",
    "method": "ui/create",
    "params": {
      "attributes": {
        "image": "BG",
      },
      "breakpoints": {
        "lg": 1024,
        "md": 768,
        "sm": 640,
        "xl": 1280,
        "xs": 400,
      },
      "content": undefined,
      "element": "e-3",
      "name": "instance",
      "parent": "e-2",
      "style": {
        "background_image": "url("https://example.com/bg.png")",
      },
      "type": "span",
    },
  },
  {
    "id": "req-3",
    "kind": "request",
    "method": "ui/create",
    "params": {
      "attributes": {
        "src": "https://example.com/bg.png",
      },
      "breakpoints": {
        "lg": 1024,
        "md": 768,
        "sm": 640,
        "xl": 1280,
        "xs": 400,
      },
      "content": undefined,
      "element": "e-4",
      "name": "object",
      "parent": "e-3",
      "style": undefined,
      "type": "img",
    },
  },
  {
    "id": "req-4",
    "kind": "request",
    "method": "ui/animate",
    "params": {
      "effects": [
        {
          "animations": [
            {
              "$name": "show",
              "$type": "animation",
              "keyframes": [
                {
                  "opacity": "1",
                },
              ],
              "target": {
                "$name": "self",
                "$type": "layer",
              },
              "timing": {
                "delay": "0s",
                "direction": "normal",
                "duration": "0s",
                "easing": "linear",
                "fill": "both",
                "iterations": 1,
              },
            },
          ],
          "element": "e-1",
        },
      ],
    },
  },
  {
    "id": "req-5",
    "kind": "request",
    "method": "ui/animate",
    "params": {
      "effects": [
        {
          "animations": [
            {
              "$name": "show",
              "$type": "animation",
              "keyframes": [
                {
                  "opacity": "1",
                },
              ],
              "target": {
                "$name": "self",
                "$type": "layer",
              },
              "timing": {
                "delay": "0s",
                "direction": "normal",
                "duration": 0,
                "easing": "linear",
                "fill": "both",
                "iterations": 1,
              },
            },
          ],
          "element": "e-3",
        },
      ],
    },
  },
]
`;

exports[`image > hide backdrop 1`] = `
[
  {
    "id": "req-1",
    "kind": "request",
    "method": "ui/update",
    "params": {
      "attributes": undefined,
      "breakpoints": {
        "lg": 1024,
        "md": 768,
        "sm": 640,
        "xl": 1280,
        "xs": 400,
      },
      "content": undefined,
      "element": "e-1",
      "style": {
        "display": null,
      },
    },
  },
  {
    "id": "req-2",
    "kind": "request",
    "method": "ui/create",
    "params": {
      "attributes": {
        "image": "BG",
      },
      "breakpoints": {
        "lg": 1024,
        "md": 768,
        "sm": 640,
        "xl": 1280,
        "xs": 400,
      },
      "content": undefined,
      "element": "e-3",
      "name": "instance",
      "parent": "e-2",
      "style": {
        "background_image": "url("https://example.com/bg.png")",
      },
      "type": "span",
    },
  },
  {
    "id": "req-3",
    "kind": "request",
    "method": "ui/create",
    "params": {
      "attributes": {
        "src": "https://example.com/bg.png",
      },
      "breakpoints": {
        "lg": 1024,
        "md": 768,
        "sm": 640,
        "xl": 1280,
        "xs": 400,
      },
      "content": undefined,
      "element": "e-4",
      "name": "object",
      "parent": "e-3",
      "style": undefined,
      "type": "img",
    },
  },
  {
    "id": "req-4",
    "kind": "request",
    "method": "ui/animate",
    "params": {
      "effects": [
        {
          "animations": [
            {
              "$name": "show",
              "$type": "animation",
              "keyframes": [
                {
                  "opacity": "1",
                },
              ],
              "target": {
                "$name": "self",
                "$type": "layer",
              },
              "timing": {
                "delay": "0s",
                "direction": "normal",
                "duration": "0s",
                "easing": "linear",
                "fill": "both",
                "iterations": 1,
              },
            },
            {
              "$name": "hide",
              "$type": "animation",
              "keyframes": [
                {
                  "opacity": "0",
                },
              ],
              "target": {
                "$name": "self",
                "$type": "layer",
              },
              "timing": {
                "delay": "0s",
                "direction": "normal",
                "duration": "0s",
                "easing": "linear",
                "fill": "both",
                "iterations": 1,
              },
            },
          ],
          "element": "e-1",
        },
      ],
    },
  },
  {
    "id": "req-5",
    "kind": "request",
    "method": "ui/animate",
    "params": {
      "effects": [
        {
          "animations": [
            {
              "$name": "show",
              "$type": "animation",
              "keyframes": [
                {
                  "opacity": "1",
                },
              ],
              "target": {
                "$name": "self",
                "$type": "layer",
              },
              "timing": {
                "delay": "0s",
                "direction": "normal",
                "duration": "0s",
                "easing": "linear",
                "fill": "both",
                "iterations": 1,
              },
            },
          ],
          "element": "e-3",
        },
      ],
    },
  },
]
`;

exports[`image > image animate directive 1`] = `
[
  {
    "id": "req-1",
    "kind": "request",
    "method": "ui/update",
    "params": {
      "attributes": undefined,
      "breakpoints": {
        "lg": 1024,
        "md": 768,
        "sm": 640,
        "xl": 1280,
        "xs": 400,
      },
      "content": undefined,
      "element": "e-1",
      "style": {
        "display": null,
      },
    },
  },
  {
    "id": "req-2",
    "kind": "request",
    "method": "ui/create",
    "params": {
      "attributes": {
        "image": "SPRITE",
      },
      "breakpoints": {
        "lg": 1024,
        "md": 768,
        "sm": 640,
        "xl": 1280,
        "xs": 400,
      },
      "content": undefined,
      "element": "e-3",
      "name": "instance",
      "parent": "e-2",
      "style": {
        "background_image": "url("https://example.com/hero.png")",
      },
      "type": "span",
    },
  },
  {
    "id": "req-3",
    "kind": "request",
    "method": "ui/create",
    "params": {
      "attributes": {
        "src": "https://example.com/hero.png",
      },
      "breakpoints": {
        "lg": 1024,
        "md": 768,
        "sm": 640,
        "xl": 1280,
        "xs": 400,
      },
      "content": undefined,
      "element": "e-4",
      "name": "object",
      "parent": "e-3",
      "style": undefined,
      "type": "img",
    },
  },
  {
    "id": "req-4",
    "kind": "request",
    "method": "ui/animate",
    "params": {
      "effects": [
        {
          "animations": [
            {
              "$name": "show",
              "$type": "animation",
              "keyframes": [
                {
                  "opacity": "1",
                },
              ],
              "target": {
                "$name": "self",
                "$type": "layer",
              },
              "timing": {
                "delay": "0s",
                "direction": "normal",
                "duration": "0s",
                "easing": "linear",
                "fill": "both",
                "iterations": 1,
              },
            },
            {
              "$name": "shake",
              "$type": "animation",
              "keyframes": [
                {
                  "transform": "translate(0.4vh, 0.2vh)",
                },
                {
                  "transform": "translate(-0.2vh, -0.4vh)",
                },
                {
                  "transform": "translate(-0.6vh, 0vh)",
                },
                {
                  "transform": "translate(0vh, 0.4vh)",
                },
                {
                  "transform": "translate(0.2vh, -0.2vh)",
                },
                {
                  "transform": "translate(-0.2vh, 0.4vh)",
                },
                {
                  "transform": "translate(-0.6vh, 0.2vh)",
                },
                {
                  "transform": "translate(0.4vh, 0.2vh)",
                },
                {
                  "transform": "translate(-0.2vh, -0.2vh)",
                },
                {
                  "transform": "translate(0.4vh, 0.4vh)",
                },
                {
                  "transform": "translate(0.2vh, -0.4vh)",
                },
              ],
              "target": {
                "$name": "self",
                "$type": "layer",
              },
              "timing": {
                "delay": "0s",
                "direction": "normal",
                "duration": "0s",
                "easing": "ease-in-out",
                "fill": "none",
                "iterations": 1,
              },
            },
          ],
          "element": "e-1",
        },
      ],
    },
  },
  {
    "id": "req-5",
    "kind": "request",
    "method": "ui/animate",
    "params": {
      "effects": [
        {
          "animations": [
            {
              "$name": "show",
              "$type": "animation",
              "keyframes": [
                {
                  "opacity": "1",
                },
              ],
              "target": {
                "$name": "self",
                "$type": "layer",
              },
              "timing": {
                "delay": "0s",
                "direction": "normal",
                "duration": "0s",
                "easing": "linear",
                "fill": "both",
                "iterations": 1,
              },
            },
          ],
          "element": "e-3",
        },
      ],
    },
  },
]
`;

exports[`image > layered images (multi-asset SPRITE+SHADOW) stack background_image 1`] = `
[
  {
    "id": "req-1",
    "kind": "request",
    "method": "ui/update",
    "params": {
      "attributes": undefined,
      "breakpoints": {
        "lg": 1024,
        "md": 768,
        "sm": 640,
        "xl": 1280,
        "xs": 400,
      },
      "content": undefined,
      "element": "e-1",
      "style": {
        "display": null,
      },
    },
  },
  {
    "id": "req-2",
    "kind": "request",
    "method": "ui/create",
    "params": {
      "attributes": {
        "image": "SPRITE SHADOW",
      },
      "breakpoints": {
        "lg": 1024,
        "md": 768,
        "sm": 640,
        "xl": 1280,
        "xs": 400,
      },
      "content": undefined,
      "element": "e-3",
      "name": "instance",
      "parent": "e-2",
      "style": {
        "background_image": "url("https://example.com/shadow.png"), url("https://example.com/hero.png")",
      },
      "type": "span",
    },
  },
  {
    "id": "req-3",
    "kind": "request",
    "method": "ui/create",
    "params": {
      "attributes": {
        "src": "https://example.com/hero.png",
      },
      "breakpoints": {
        "lg": 1024,
        "md": 768,
        "sm": 640,
        "xl": 1280,
        "xs": 400,
      },
      "content": undefined,
      "element": "e-4",
      "name": "object",
      "parent": "e-3",
      "style": undefined,
      "type": "img",
    },
  },
  {
    "id": "req-4",
    "kind": "request",
    "method": "ui/animate",
    "params": {
      "effects": [
        {
          "animations": [
            {
              "$name": "show",
              "$type": "animation",
              "keyframes": [
                {
                  "opacity": "1",
                },
              ],
              "target": {
                "$name": "self",
                "$type": "layer",
              },
              "timing": {
                "delay": "0s",
                "direction": "normal",
                "duration": "0s",
                "easing": "linear",
                "fill": "both",
                "iterations": 1,
              },
            },
          ],
          "element": "e-1",
        },
      ],
    },
  },
  {
    "id": "req-5",
    "kind": "request",
    "method": "ui/animate",
    "params": {
      "effects": [
        {
          "animations": [
            {
              "$name": "show",
              "$type": "animation",
              "keyframes": [
                {
                  "opacity": "1",
                },
              ],
              "target": {
                "$name": "self",
                "$type": "layer",
              },
              "timing": {
                "delay": "0s",
                "direction": "normal",
                "duration": "0s",
                "easing": "linear",
                "fill": "both",
                "iterations": 1,
              },
            },
          ],
          "element": "e-3",
        },
      ],
    },
  },
]
`;

exports[`image > show backdrop 1`] = `
[
  {
    "id": "req-1",
    "kind": "request",
    "method": "ui/update",
    "params": {
      "attributes": undefined,
      "breakpoints": {
        "lg": 1024,
        "md": 768,
        "sm": 640,
        "xl": 1280,
        "xs": 400,
      },
      "content": undefined,
      "element": "e-1",
      "style": {
        "display": null,
      },
    },
  },
  {
    "id": "req-2",
    "kind": "request",
    "method": "ui/create",
    "params": {
      "attributes": {
        "image": "BG",
      },
      "breakpoints": {
        "lg": 1024,
        "md": 768,
        "sm": 640,
        "xl": 1280,
        "xs": 400,
      },
      "content": undefined,
      "element": "e-3",
      "name": "instance",
      "parent": "e-2",
      "style": {
        "background_image": "url("https://example.com/bg.png")",
      },
      "type": "span",
    },
  },
  {
    "id": "req-3",
    "kind": "request",
    "method": "ui/create",
    "params": {
      "attributes": {
        "src": "https://example.com/bg.png",
      },
      "breakpoints": {
        "lg": 1024,
        "md": 768,
        "sm": 640,
        "xl": 1280,
        "xs": 400,
      },
      "content": undefined,
      "element": "e-4",
      "name": "object",
      "parent": "e-3",
      "style": undefined,
      "type": "img",
    },
  },
  {
    "id": "req-4",
    "kind": "request",
    "method": "ui/animate",
    "params": {
      "effects": [
        {
          "animations": [
            {
              "$name": "show",
              "$type": "animation",
              "keyframes": [
                {
                  "opacity": "1",
                },
              ],
              "target": {
                "$name": "self",
                "$type": "layer",
              },
              "timing": {
                "delay": "0s",
                "direction": "normal",
                "duration": "0s",
                "easing": "linear",
                "fill": "both",
                "iterations": 1,
              },
            },
          ],
          "element": "e-1",
        },
      ],
    },
  },
  {
    "id": "req-5",
    "kind": "request",
    "method": "ui/animate",
    "params": {
      "effects": [
        {
          "animations": [
            {
              "$name": "show",
              "$type": "animation",
              "keyframes": [
                {
                  "opacity": "1",
                },
              ],
              "target": {
                "$name": "self",
                "$type": "layer",
              },
              "timing": {
                "delay": "0s",
                "direction": "normal",
                "duration": "0s",
                "easing": "linear",
                "fill": "both",
                "iterations": 1,
              },
            },
          ],
          "element": "e-3",
        },
      ],
    },
  },
]
`;

exports[`image > show then re-show (crossfade: hide+destroy previous layer) 1`] = `
[
  {
    "id": "req-1",
    "kind": "request",
    "method": "ui/update",
    "params": {
      "attributes": undefined,
      "breakpoints": {
        "lg": 1024,
        "md": 768,
        "sm": 640,
        "xl": 1280,
        "xs": 400,
      },
      "content": undefined,
      "element": "e-1",
      "style": {
        "display": null,
      },
    },
  },
  {
    "id": "req-2",
    "kind": "request",
    "method": "ui/create",
    "params": {
      "attributes": {
        "image": "BG",
      },
      "breakpoints": {
        "lg": 1024,
        "md": 768,
        "sm": 640,
        "xl": 1280,
        "xs": 400,
      },
      "content": undefined,
      "element": "e-3",
      "name": "instance",
      "parent": "e-2",
      "style": {
        "background_image": "url("https://example.com/bg.png")",
      },
      "type": "span",
    },
  },
  {
    "id": "req-3",
    "kind": "request",
    "method": "ui/create",
    "params": {
      "attributes": {
        "src": "https://example.com/bg.png",
      },
      "breakpoints": {
        "lg": 1024,
        "md": 768,
        "sm": 640,
        "xl": 1280,
        "xs": 400,
      },
      "content": undefined,
      "element": "e-4",
      "name": "object",
      "parent": "e-3",
      "style": undefined,
      "type": "img",
    },
  },
  {
    "id": "req-4",
    "kind": "request",
    "method": "ui/create",
    "params": {
      "attributes": {
        "image": "BG2",
      },
      "breakpoints": {
        "lg": 1024,
        "md": 768,
        "sm": 640,
        "xl": 1280,
        "xs": 400,
      },
      "content": undefined,
      "element": "e-5",
      "name": "instance",
      "parent": "e-2",
      "style": {
        "background_image": "url("https://example.com/bg2.png")",
      },
      "type": "span",
    },
  },
  {
    "id": "req-5",
    "kind": "request",
    "method": "ui/create",
    "params": {
      "attributes": {
        "src": "https://example.com/bg2.png",
      },
      "breakpoints": {
        "lg": 1024,
        "md": 768,
        "sm": 640,
        "xl": 1280,
        "xs": 400,
      },
      "content": undefined,
      "element": "e-6",
      "name": "object",
      "parent": "e-5",
      "style": undefined,
      "type": "img",
    },
  },
  {
    "id": "req-6",
    "kind": "request",
    "method": "ui/animate",
    "params": {
      "effects": [
        {
          "animations": [
            {
              "$name": "show",
              "$type": "animation",
              "keyframes": [
                {
                  "opacity": "1",
                },
              ],
              "target": {
                "$name": "self",
                "$type": "layer",
              },
              "timing": {
                "delay": "0s",
                "direction": "normal",
                "duration": "0s",
                "easing": "linear",
                "fill": "both",
                "iterations": 1,
              },
            },
            {
              "$name": "show",
              "$type": "animation",
              "keyframes": [
                {
                  "opacity": "1",
                },
              ],
              "target": {
                "$name": "self",
                "$type": "layer",
              },
              "timing": {
                "delay": "0s",
                "direction": "normal",
                "duration": "0s",
                "easing": "linear",
                "fill": "both",
                "iterations": 1,
              },
            },
          ],
          "element": "e-1",
        },
      ],
    },
  },
  {
    "id": "req-7",
    "kind": "request",
    "method": "ui/animate",
    "params": {
      "effects": [
        {
          "animations": [
            {
              "$name": "show",
              "$type": "animation",
              "keyframes": [
                {
                  "opacity": "1",
                },
              ],
              "target": {
                "$name": "self",
                "$type": "layer",
              },
              "timing": {
                "delay": "0s",
                "direction": "normal",
                "duration": "0s",
                "easing": "linear",
                "fill": "both",
                "iterations": 1,
              },
            },
          ],
          "element": "e-3",
        },
        {
          "animations": [
            {
              "$name": "show",
              "$type": "animation",
              "keyframes": [
                {
                  "opacity": "1",
                },
              ],
              "target": {
                "$name": "self",
                "$type": "layer",
              },
              "timing": {
                "delay": "0s",
                "direction": "normal",
                "duration": "0s",
                "easing": "linear",
                "fill": "both",
                "iterations": 1,
              },
            },
          ],
          "element": "e-5",
        },
      ],
    },
  },
  {
    "id": "req-8",
    "kind": "request",
    "method": "ui/animate",
    "params": {
      "effects": [
        {
          "animations": [
            {
              "$name": "hide",
              "$type": "animation",
              "keyframes": [
                {
                  "opacity": "0",
                },
              ],
              "target": {
                "$name": "self",
                "$type": "layer",
              },
              "timing": {
                "delay": "0s",
                "direction": "normal",
                "duration": "0s",
                "easing": "linear",
                "fill": "both",
                "iterations": 1,
              },
            },
          ],
          "element": "e-3",
        },
      ],
    },
  },
  {
    "id": "req-9",
    "kind": "request",
    "method": "ui/destroy",
    "params": {
      "element": "e-3",
    },
  },
]
`;

exports[`image > show with fade transition 1`] = `
[
  {
    "id": "req-1",
    "kind": "request",
    "method": "ui/update",
    "params": {
      "attributes": undefined,
      "breakpoints": {
        "lg": 1024,
        "md": 768,
        "sm": 640,
        "xl": 1280,
        "xs": 400,
      },
      "content": undefined,
      "element": "e-1",
      "style": {
        "display": null,
      },
    },
  },
  {
    "id": "req-2",
    "kind": "request",
    "method": "ui/create",
    "params": {
      "attributes": {
        "image": "BG",
      },
      "breakpoints": {
        "lg": 1024,
        "md": 768,
        "sm": 640,
        "xl": 1280,
        "xs": 400,
      },
      "content": undefined,
      "element": "e-3",
      "name": "instance",
      "parent": "e-2",
      "style": {
        "background_image": "url("https://example.com/bg.png")",
      },
      "type": "span",
    },
  },
  {
    "id": "req-3",
    "kind": "request",
    "method": "ui/create",
    "params": {
      "attributes": {
        "src": "https://example.com/bg.png",
      },
      "breakpoints": {
        "lg": 1024,
        "md": 768,
        "sm": 640,
        "xl": 1280,
        "xs": 400,
      },
      "content": undefined,
      "element": "e-4",
      "name": "object",
      "parent": "e-3",
      "style": undefined,
      "type": "img",
    },
  },
  {
    "id": "req-4",
    "kind": "request",
    "method": "ui/animate",
    "params": {
      "effects": [
        {
          "animations": [
            {
              "$name": "show",
              "$type": "animation",
              "keyframes": [
                {
                  "opacity": "1",
                },
              ],
              "target": {
                "$name": "self",
                "$type": "layer",
              },
              "timing": {
                "delay": "0s",
                "direction": "normal",
                "duration": "0s",
                "easing": "linear",
                "fill": "both",
                "iterations": 1,
              },
            },
          ],
          "element": "e-1",
        },
      ],
    },
  },
  {
    "id": "req-5",
    "kind": "request",
    "method": "ui/animate",
    "params": {
      "effects": [
        {
          "animations": [
            {
              "$name": "fadein",
              "$type": "animation",
              "keyframes": [
                {
                  "opacity": "1",
                },
              ],
              "target": {
                "$name": "self",
                "$type": "layer",
              },
              "timing": {
                "delay": "0s",
                "direction": "normal",
                "duration": "0s",
                "easing": "linear",
                "fill": "both",
                "iterations": 1,
              },
            },
          ],
          "element": "e-3",
        },
      ],
    },
  },
]
`;
